--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -145,9 +145,10 @@
 }
 .banner {
   height: 285px;
-  background: #f5f5f5;
+  background: skyblue;
 }
 .banner .sub-container {
+  position: relative;
   display: flex;
 }
 .banner .sub-container .banner-img {
@@ -208,5 +209,22 @@
 .banner .sub-container .banner-nav .desc {
   margin: 10px auto;
   color: #8d8d8d;
+}
+.banner .sub-container .arrow {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 37px;
+  height: 63px;
+  margin: auto 0;
+  background: url("../assets/arrow.png") no-repeat gray;
+}
+.banner .sub-container .arrow-left {
+  left: -68px;
+  background-position: 0 -360px;
+}
+.banner .sub-container .arrow-right {
+  right: -68px;
+  background-position: 0 -508px;
 }
 /*# sourceMappingURL=index.css.map */
