--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -177,9 +177,10 @@
 
 .banner {
   height: 285px;
-  background: #f5f5f5;
+  background: skyblue;
 
   .sub-container {
+    position: relative;
     display: flex;
 
     .banner-img {
@@ -254,5 +255,30 @@
       }
 
     }
+
+    .arrow {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 37px;
+      height: 63px;
+      margin: auto 0;
+      background: url("../assets/arrow.png") no-repeat gray;
+    }
+
+    .arrow-left {
+      left: -68px;
+      background-position: 0 -360px
+    }
+
+    .arrow-right {
+      right: -68px;
+      background-position: 0 -508px
+    }
+
   }
+}
+
+.floor {
+
 }
