--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -145,7 +145,7 @@
 }
 .banner {
   height: 285px;
-  background: skyblue;
+  background-image: linear-gradient(#192535, #2444a9);
 }
 .banner .sub-container {
   position: relative;
@@ -217,7 +217,10 @@
   width: 37px;
   height: 63px;
   margin: auto 0;
-  background: url("../assets/arrow.png") no-repeat gray;
+  background: url("../assets/arrow.png") no-repeat;
+}
+.banner .sub-container .arrow:hover {
+  background-color: #cccccc;
 }
 .banner .sub-container .arrow-left {
   left: -68px;
