--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -230,4 +230,96 @@
   right: -68px;
   background-position: 0 -508px;
 }
+.floor {
+  background-color: #f5f5f5;
+}
+.floor .sub-container {
+  background-color: #fff;
+  display: flex;
+}
+.floor .sub-container .floor-left {
+  width: 729px;
+  border: 1px solid #d3d3d3;
+}
+.floor .sub-container .floor-left .hot {
+  padding: 20px 20px 40px;
+}
+.floor .sub-container .floor-left .hot .hot-nav {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid red;
+}
+.floor .sub-container .floor-left .hot .hot-nav .hot-nav-left {
+  display: flex;
+}
+.floor .sub-container .floor-left .hot .hot-nav .hot-nav-left .hot-nav-title {
+  padding: 0 10px 0 34px;
+  font-size: 20px;
+}
+.floor .sub-container .floor-left .hot .hot-nav .hot-nav-left .hot-nav-links {
+  display: flex;
+  align-items: center;
+  margin-left: 7px;
+}
+.floor .sub-container .floor-left .hot .hot-nav .hot-nav-left .hot-nav-links li {
+  padding: 0 12px;
+  border-right: 1px solid #cfd0db;
+}
+.floor .sub-container .floor-left .hot .hot-nav .hot-nav-left .hot-nav-links li:last-child {
+  border-right: 0;
+}
+.floor .sub-container .floor-left .hot .hot-nav .hot-nav-left .hot-nav-links a {
+  font-size: 14px;
+}
+.floor .sub-container .floor-left .hot .hot-nav .more {
+  display: block;
+  padding-right: 22px;
+}
+.floor .sub-container .floor-left .hot .hot-nav:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  content: '';
+  width: 35px;
+  height: 35px;
+  background: url("../assets/index.png") no-repeat -225px -156px;
+}
+.floor .sub-container .floor-left .hot .hot-nav:after {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  display: block;
+  content: '';
+  width: 12px;
+  height: 12px;
+  background: url("../assets/index.png") no-repeat 0 -240px;
+}
+.floor .sub-container .floor-left .hot .hot-content {
+  margin-top: 30px;
+  font-size: 14px;
+}
+.floor .sub-container .floor-left .hot .hot-content .hot-music {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-around;
+  flex-wrap: wrap;
+}
+.floor .sub-container .floor-left .hot .hot-content .hot-music li {
+  margin-bottom: 30px;
+}
+.floor .sub-container .floor-left .hot .hot-content .hot-music li .cover {
+  width: 140px;
+  height: 140px;
+}
+.floor .sub-container .floor-left .hot .hot-content .hot-music li .desc {
+  width: 140px;
+}
+.floor .sub-container .floor-right {
+  width: 255px;
+  border: 1px solid #d3d3d3;
+  border-left: 0;
+}
 /*# sourceMappingURL=index.css.map */
