--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -284,5 +284,113 @@
 }
 
 .floor {
+  background-color: #f5f5f5;
 
+  .sub-container {
+    background-color: #fff;
+    display: flex;
+
+    .floor-left {
+      width: 729px;
+      border: 1px solid #d3d3d3;
+
+      .hot {
+        padding: 20px 20px 40px;
+
+        .hot-nav {
+          position: relative;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          border-bottom: 2px solid red;
+
+          .hot-nav-left {
+            display: flex;
+
+            .hot-nav-title {
+              padding: 0 10px 0 34px;
+              font-size: 20px;
+            }
+
+            .hot-nav-links {
+              display: flex;
+              align-items: center;
+              margin-left: 7px;
+
+              li {
+                padding: 0 12px;
+                border-right: 1px solid #cfd0db;
+
+                &:last-child {
+                  border-right: 0;
+                }
+              }
+
+              a {
+                font-size: 14px;
+              }
+            }
+          }
+
+          .more {
+            display: block;
+            padding-right: 22px;
+          }
+
+          &:before {
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+            content: '';
+            width: 35px;
+            height: 35px;
+            background: url("../assets/index.png") no-repeat -225px -156px;
+          }
+
+          &:after {
+            position: absolute;
+            top: 10px;
+            right: 0;
+            display: block;
+            content: '';
+            width: 12px;
+            height: 12px;
+            background: url("../assets/index.png") no-repeat 0 -240px;
+          }
+        }
+
+        .hot-content {
+          margin-top: 30px;
+          font-size: 14px;
+
+          .hot-music {
+            display: flex;
+            justify-content: space-between;
+            align-content: space-around;
+            flex-wrap: wrap;
+
+            li {
+              margin-bottom: 30px;
+
+              .cover {
+                width: 140px;
+                height: 140px;
+              }
+
+              .desc {
+                width: 140px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .floor-right {
+      width: 255px;
+      border: 1px solid #d3d3d3;
+      border-left: 0;
+    }
+  }
 }
