--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -240,6 +240,7 @@
 .floor .sub-container .floor-left {
   width: 729px;
   border: 1px solid #d3d3d3;
+  border-bottom: 0;
 }
 .floor .sub-container .floor-left .hot {
   padding: 20px 20px 40px;
@@ -321,14 +322,13 @@
   width: 255px;
   border: 1px solid #d3d3d3;
   border-left: 0;
+  border-bottom: 0;
 }
 .floor .sub-container .floor-right .user-login {
-  width: 250px;
+  width: 100%;
   height: 126px;
+  padding: 15px;
   background-image: linear-gradient(#fdfdfd, #e2e2e2);
-}
-.floor .sub-container .floor-right .user-login p {
-  margin: 15px;
 }
 .floor .sub-container .floor-right .user-login .login-btn {
   display: block;
@@ -340,5 +340,96 @@
   background-color: #c20c0c;
   margin: 30px auto 0;
   border-radius: 5px;
+}
+.floor .sub-container .floor-right .other {
+  padding: 20px;
+}
+.floor .sub-container .floor-right .other .signer {
+  display: flex;
+  padding-bottom: 8px;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+.floor .sub-container .floor-right .other .signer .header {
+  font-weight: bold;
+}
+.floor .sub-container .floor-right .other .content li {
+  border: 1px solid #e9e9e9;
+  margin: 20px 0;
+}
+.floor .sub-container .floor-right .other .content li a {
+  display: flex;
+  color: #666;
+  background-color: #fafafa;
+}
+.floor .sub-container .floor-right .other .content li a img {
+  display: block;
+  width: 62px;
+  height: 62px;
+}
+.floor .sub-container .floor-right .other .content li a .desc {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-left: 20px;
+}
+.floor .sub-container .floor-right .other .content li a .desc .singer-name {
+  font-weight: bold;
+}
+.floor .sub-container .floor-right .other .content li a:hover {
+  background-color: #f4f4f4;
+}
+.floor .sub-container .floor-right .other .apply {
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 50px;
+  background-image: linear-gradient(#ffffff, #fbfbfb);
+  color: #666;
+  border: 1px solid #e9e9e9;
+}
+.floor .sub-container .floor-right .other .apply:hover {
+  background-color: #fff;
+}
+.footer {
+  height: 324px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #d3d3d3;
+}
+.footer .sub-container {
+  padding-top: 30px;
+}
+.footer .sub-container .tips {
+  display: flex;
+  justify-content: space-evenly;
+}
+.footer .sub-container .tips li {
+  width: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer .sub-container .tips li a {
+  display: block;
+  width: 45px;
+  height: 45px;
+  background: url("../assets/footer-sprite.png") no-repeat -170px -5px;
+  background-size: 220px 220px;
+}
+.footer .sub-container .tips li p {
+  margin-top: 10px;
+  text-align: center;
+}
+.footer .sub-container .links,
+.footer .sub-container .report,
+.footer .sub-container p {
+  margin-top: 10px;
+  text-align: center;
+}
+.footer .sub-container .links {
+  margin-top: 70px;
 }
 /*# sourceMappingURL=index.css.map */
