--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -293,6 +293,7 @@
     .floor-left {
       width: 729px;
       border: 1px solid #d3d3d3;
+      border-bottom: 0;
 
       .hot {
         padding: 20px 20px 40px;
@@ -391,16 +392,14 @@
       width: 255px;
       border: 1px solid #d3d3d3;
       border-left: 0;
-
+      border-bottom: 0;
 
       .user-login {
-        width: 250px;
+        width: 100%;
         height: 126px;
+        padding: 15px;
         background-image: linear-gradient(#fdfdfd, #e2e2e2);
 
-        p {
-          margin: 15px;
-        }
 
         .login-btn {
           display: block;
@@ -414,6 +413,120 @@
           border-radius: 5px;
         }
       }
+
+      .other {
+        padding: 20px;
+
+        .signer {
+          display: flex;
+          padding-bottom: 8px;
+          justify-content: space-between;
+          align-items: center;
+          border-bottom: 1px solid black;
+
+          .header {
+            font-weight: bold;
+          }
+        }
+
+        .content {
+          li {
+            border: 1px solid #e9e9e9;
+            margin: 20px 0;
+
+            a {
+              display: flex;
+              color: #666;
+              background-color: #fafafa;
+
+              img {
+                display: block;
+                width: 62px;
+                height: 62px;
+              }
+
+              .desc {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                justify-content: space-evenly;
+                margin-left: 20px;
+
+
+                .singer-name {
+                  font-weight: bold;
+                }
+              }
+
+              &:hover {
+                background-color: #f4f4f4;
+              }
+            }
+          }
+
+        }
+
+        .apply {
+          display: block;
+          text-align: center;
+          font-weight: bold;
+          padding: 10px 50px;
+          background-image: linear-gradient(#ffffff, #fbfbfb);
+          color: #666;
+          border: 1px solid #e9e9e9;
+
+          &:hover {
+            background-color: #fff;
+          }
+        }
+      }
     }
+  }
+}
+
+.footer {
+  height: 324px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #d3d3d3;
+
+  .sub-container {
+    padding-top: 30px;
+
+    .tips {
+      display: flex;
+      justify-content: space-evenly;
+
+      li {
+        width: 90px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        a {
+          display: block;
+          width: 45px;
+          height: 45px;
+          background: url("../assets/footer-sprite.png") no-repeat -170px -5px;
+          background-size: 220px 220px;
+        }
+
+        p {
+          margin-top: 10px;
+          text-align: center;
+        }
+      }
+    }
+
+
+    .links, .report, p {
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .links {
+      margin-top: 70px;
+    }
+
   }
 }
