--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
@@ -70,7 +70,7 @@
   transform: rotate(90deg);
 }
 .top-nav-container {
-  width: 1120px;
+  width: 1300px;
   margin: 0 auto;
 }
 .top-nav {
@@ -96,6 +96,7 @@
 }
 .top-nav .top-nav-container .left .top-nav-links {
   display: flex;
+  margin-left: 30px;
 }
 .top-nav .top-nav-container .left .top-nav-links .item a {
   padding-top: 20px;
@@ -121,6 +122,25 @@
   color: #858792;
 }
 .top-nav .top-nav-container .right {
-  background-color: skyblue;
+  display: flex;
+  align-items: center;
+  margin-left: 80px;
+}
+.top-nav .top-nav-container .right .avatar {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  border: 1px solid #f3c258;
+}
+.top-nav .top-nav-container .right .user-login {
+  margin-left: 8px;
+}
+.top-nav .top-nav-container .right .user-login a {
+  font-size: 16px;
+  color: #fff;
+}
+.top-nav .top-nav-container .right .user-login p {
+  font-size: 14px;
+  color: #858792;
 }
 /*# sourceMappingURL=index.css.map */
