--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -12,7 +12,6 @@
 
     height: 41px;
     line-height: 41px;
-    //background-color: pink;
 
     .left {
       display: flex;
@@ -88,12 +87,13 @@
 }
 
 .top-nav-container {
-  width: 1120px;
+  width: 1300px;
   margin: 0 auto;
 }
 
 .top-nav {
   background-color: rgba(0, 0, 0, .8);
+
 
   .top-nav-container {
     display: flex;
@@ -103,7 +103,6 @@
 
     .left {
       display: flex;
-      //background-color: pink;
 
       .logo {
 
@@ -121,6 +120,7 @@
 
       .top-nav-links {
         display: flex;
+        margin-left: 30px;
 
         .item {
           a {
@@ -154,7 +154,32 @@
     }
 
     .right {
-      background-color: skyblue;
+      display: flex;
+      align-items: center;
+      margin-left: 80px;
+
+      .avatar {
+        width: 42px;
+        height: 42px;
+        border-radius: 50%;
+        border: 1px solid #f3c258;
+
+      }
+
+      .user-login {
+        margin-left: 8px;
+
+        a {
+          font-size: 16px;
+          color: #fff;
+        }
+
+        p {
+          font-size: 14px;
+          color: #858792;
+        }
+      }
+
     }
 
   }
